fix:post/sectores
