# server.js
@@ -8,6 +8,8 @@ import { swaggerMiddleware } from './src/config/swagger.js';
 import authRoutes  from './src/routes/auth.js';
 import userRoutes  from './src/routes/user.js';
 import roleRoutes  from './src/routes/role.js';
+import territorioRoutes from './src/routes/territorio.js';
+import sectorRoutes     from './src/routes/sector.js';
 
 import { errorHandler } from './src/middlewares/errorHandler.js';
 import { auditLog }    from './src/middlewares/log.js';
@@ -26,11 +28,13 @@ app.use(morgan(process.env.LOG_LEVEL || 'dev'));
 app.use('/docs', ...swaggerMiddleware);
 
 /* Rutas públicas */
-app.use('/api/v1/auth', auditLog, authRoutes);
+app.use('/api/v1/auth', authRoutes);
 
 /* Rutas protegidas ─ requieren JWT */
-app.use('/api/v1/users', authenticate, auditLog, userRoutes);
-app.use('/api/v1/roles', authenticate, auditLog, roleRoutes);
+app.use('/api/v1/users',      authenticate, auditLog, userRoutes);
+app.use('/api/v1/roles',      authenticate, auditLog, roleRoutes);
+app.use('/api/v1/territorios',authenticate, auditLog, territorioRoutes);
+app.use('/api/v1/sectores',   authenticate, auditLog, sectorRoutes);
 
 /* 404 */
 app.use((_req, res) =>
